--- a/README.textile
+++ b/README.textile
@@ -12,6 +12,16 @@ Adds this dialog to Google Refine's interface:
 Which then uploads data to the server of your choice! In this case CouchDB:
 !http://i.imgur.com/0yMIK.png!
 
+h2. Installation
+
+Run Google Refine. On the starting page click the "Browse workspace directory" link in the lower left corner. Make a folder called "extensions" within the the window that pops up.  Copy the refine-uploader folder into the extensions folder.  The final path should be:
+
+<pre>
+/PATH/TO/google/refine/extensions/refine-uploader/...
+</pre>
+
+Restart Google Refine.
+
 h2. Hacking on the codez
 
 * Check out the Google refine source code
